# vscode-pm

./: .gitignore  README.md  com.github.basson.json  meson.build  meson_options.txt  uncrustify.cfg
builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json
builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-dependencies.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  intro-tests.json  meson-info.json
builddir/meson-logs/: meson-log.txt
builddir/meson-private/: coredata.dat.prev
builddir/src/: com.github.basson_xvi.vscode  config.vala
builddir/src/25a6634@@com.github.basson_xvi.vscode@exe/: Application.c  Main.c  Window.c  config.c
builddir/src/25a6634@@com.github.basson_xvi.vscode@exe/Layouts/: HeaderBar.c  Main.c  Welcome.c
data/: assets.gresource.xml  com.github.basson.appdata.xml.in  com.github.basson.desktop.in  com.github.basson.gschema.xml  com.github.basson.vscode-pm.appdata.xml.in  com.github.basson.vscode-pm.desktop.in  meson.build  stylesheet.css
data/icons/: meson.build
po/: POTFILES  com.github.basson.vscode-pm.pot  meson.build  ru.mo  ru.po
schemas/: com.github.basson.vscode-pm.gschema.xml.in  com.github.basson_xvi.vscode-pm.gschema.xml.in  com.github.basson_xvi.vscode.gschema.xml.in  com.github.basson_xvi.vscode_pm.gschema.xml.in  meson.build
src/: Application.vala  Main.vala  Window.vala  config.vala.in  meson.build
src/Layouts/: HeaderBar.vala  Main.vala  Projects.vala  Welcome.vala
src/Layouts/Views/: ProjectItem.vala
src/Models/: Icon.vala  Project.vala
src/Services/: ActionManager.vala  ProjectManager.vala  Settings.vala  XmlToProjects.vala
src/Widgets/: AddProjectDialog.vala  CreateProjectDialog.vala  EditProjectDialog.vala
